<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">GeoFind</string>
    <string name="developer" translatable="false">Martín Laiz Gómez</string>
    <string name="pref_log_out" translatable="false">log_out</string>
    <string name="pref_map" translatable="false">map</string>
    <string name="pref_satellite" translatable="false">satellite</string>
    <string name="pref_map_type" translatable="false">map_type</string>
    <string name="pref_support" translatable="false">support</string>
    <string name="app_version_name" translatable="false">v0.4-SNAPSHOT</string>
    <string name="div" translatable="false">%1$d/%2$d</string>
    <string name="two_csv" translatable="false">%1$f,%2$f</string>
    <string name="add_image">Add image</string>
    <string name="add_place">Add place</string>
    <string name="app_logo_description">App logo</string>
    <string name="confirm_password">Confirm secure</string>
    <string name="create_account">Create account</string>
    <string name="create_place">Create place</string>
    <string name="remove_place">Remove place</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="log_out">Log out</string>
    <string name="login">Log in</string>
    <string name="tour_main_image">Main tour image</string>
    <string name="create_tour">Create tour</string>
    <string name="name">Name</string>
    <string name="network_error">Network error</string>
    <string name="description">Description</string>
    <string name="next">Next</string>
    <string name="no_places">There\'s no places</string>
    <string name="other_error">Other error</string>
    <string name="secure">Password</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="place">Place</string>
    <string name="place_image">Place image</string>
    <string name="place_list">Place list</string>
    <string name="registry">Registry</string>
    <string name="required_description">Required description</string>
    <string name="required_email">Required email</string>
    <string name="required_name">Required name</string>
    <string name="required_password">Required secure</string>
    <string name="required_verify_password">Required verify secure</string>
    <string name="select_min_difficulty">Select minimum difficulty</string>
    <string name="settings">Settings</string>
    <string name="tour">Tour</string>
    <string name="tour_created">Tour created</string>
    <string name="tour_creator">Tour creator</string>
    <string name="tour_list">Tour list</string>
    <string name="tour_without_name">Tour without name</string>
    <string name="update_tour">Update tour</string>
    <string name="user_image">User image</string>
    <string name="username">Username</string>
    <string name="text_too_long">Text too long</string>
    <string name="home">Home</string>
    <string name="play">Play</string>
    <string name="tour_not_permitted">Tour not permitted</string>
    <string name="play_tour">Play Tour</string>
    <string name="place_distance_m">%d m</string>
    <string name="map">Map</string>
    <string name="compass">Compass</string>
    <string name="therm">Therm</string>
    <string name="satellite">Satellite</string>
    <string name="map_type">Map type</string>
    <string name="navigation_arrow_description">Navigation arrow</string>
    <string name="play_compass">Play compass</string>
    <string name="select_play_difficulty">Select play difficulty</string>
    <string name="play_therm">Play therm</string>
    <string name="default_map_type">Default map type</string>
    <string name="message_to_support">Message to support</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="email_in_use">Email already in use</string>
    <string name="wrong_login">We can not login</string>
    <string name="wrong_email">Wrong email</string>
    <string name="wrong_password">Wrong password</string>
    <string name="email_wrong_format">Wrong email format</string>
    <string name="your_account">Your account</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">Save</string>
    <string name="change_password">Change password</string>
    <string name="change_image">Change image</string>
    <string name="change">Change</string>
    <string name="user_saved">User saved</string>
    <string name="new_password">New password</string>
    <string name="profile">Profile</string>
    <string name="old_password">Old password</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="place_has_question">Place has question</string>
    <string name="question">Question</string>
    <string name="correct_answer">Correct answer</string>
    <string name="other_answer">Other answer</string>
    <string name="with_question">With question</string>
    <string name="required_question">Question is required</string>
    <string name="required_answer">The answer is required</string>
    <string name="answer_repeated">The answer can not be repeated</string>
    <string name="without_description">Without description</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="at_least_one_place">At least one place</string>
    <string name="no_permissions">No has permission</string>
    <string name="registered">Registered</string>
    <string name="click_edit">Click edit</string>
    <string name="place_area_description">Place area</string>
    <string name="place_distance_km">%.2f km</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="tour_completed">Tour completed</string>
    <string name="ok">OK</string>
    <string name="send_message_to_support">Send message to support</string>
    <string name="errors_and_suggestions">Errors and suggestions</string>
    <string name="app_version">App version</string>
    <string name="app_developer">App developer</string>
    <string name="add_image_url">Add image URL</string>
    <string name="image_url">Image URL</string>
    <string name="update">Update</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="exit_lose_data_alert">You will lose the unsaved data</string>
    <string name="done">Done</string>
    <string name="add_location">Add location</string>
    <string name="select_location">Select location</string>
    <string name="permanent_delete">It will be deleted permanently</string>
    <string name="cancel">Cancel</string>
    <string name="drag_handle">Drag handle</string>
    <string name="completed">Completed</string>
    <string name="in_progress">In progress</string>
    <string name="place_completed">Place completed</string>
    <string name="search">Search</string>
    <string name="app_info">App info</string>
    <string name="no_tours_match">There is no tours</string>
    <string name="places">Places</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="username_error">Username error</string>
    <string name="email_error">Email error</string>
    <string name="password_error">Password error</string>
    <string name="id_error">Id error</string>
    <string name="tour_id_error">Tour error</string>
    <string name="user_id_error">User error</string>
    <string name="existence_error">Existence error</string>
    <string name="token_error">Token error</string>
    <string name="provider_error">Provider error</string>
    <string name="provider_login_error">Provider_login error</string>
    <string name="secure_error">Secure error</string>
    <string name="auth_error">Auth error</string>
    <string name="expired_error">Expired error</string>
</resources>
