<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group
        android:id="@+id/main_actions"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navMain"
            android:title="@string/home" />
        <item
            android:id="@+id/navTourList"
            android:title="@string/tour" />
    </group>

    <group
        android:id="@+id/account_actions"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navEditProfile"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/navSettings"
            android:title="@string/settings" />
    </group>
</menu>
