<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:defaultValue="@string/pref_map"
        android:entries="@array/map_types"
        android:entryValues="@array/pref_map_types"
        android:key="@string/pref_map_type"
        android:title="@string/default_map_type"
        app:summary="@string/default_map_view" />

    <Preference
        android:key="support"
        android:summary="Send message to support"
        android:title="Support message" />

    <Preference
        android:key="@string/log_out"
        android:title="@string/log_out" />
    
    <Preference
        android:enabled="false"
        android:layout="@layout/preferences_about" />

</PreferenceScreen>